--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,32 @@ text-align: center;
     padding: 20px;
     white-space: pre-wrap;
 }
+.navi {
+    font-size:12px;
+    width:100%;
+    height:30px;
+    margin-top:5px;
+}
+.navi .naviTop {
+    clear: both;
+    padding-left:20px;
+}
+.navi .naviLogin {
+    clear: both;
 
+}
+.navi .naviLogin .branch {
+    width:50%;
+    float:left;
+    text-align: left;
+    padding-left:20px;
+}
+.navi .naviLogin .login {
+    width:50%;
+    float:right;
+    text-align: right;
+    padding-right:20px;
+}
 .search {
     width:100%;
     height:100px;
@@ -135,4 +160,12 @@ text-align: center;
     height:100px;
     border: 1px solid #ff0000;
     margin-bottom: 10px;
+}
+.swiper-container {
+    width:100%;
+    height: 85vh;
+}
+.swiper-slide {
+    width:100%;
+    height:100%;
 }
